--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -21,8 +21,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-page="/Auth/Register">Register</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Auth/Login">Login</a>
                         </li>
                     </ul>
                 </div>
