--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -15,55 +15,25 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-<!--
+
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">ZealandMarketPlace</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-page="/Auth/Register">Register</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-page="/Auth/Login">Login</a>
-                    </li>
-                </ul>
-            </div>
+    <nav>
+        <div>
+            <a class="logo_nav" asp-page="/Index"><img class="logo" src="~/images/logo.png" alt="logo"/></a>
+            <label id="icon">
+                <span class="fa fa-bars"></span>
+            </label>
         </div>
+
+        <ul>
+            <li><a asp-page="/Index" class="active">Home</a></li>
+            <li><a asp-page="/Index">Profile</a></li>
+            <li><a asp-page="/Index">Contacts</a></li>
+            <li><a asp-page="/Auth/Register">Registration</a></li>
+            <li><a asp-page="/Auth/Login">Login</a></li>
+        </ul>
     </nav>
 </header>
-
--->
-<header>
-        <nav>
-            <div>
-              <a class="logo_nav" asp-page="/Index"><img class="logo" src="~/images/logo.png" alt="logo"/></a>
-              <label id="icon">
-                <span class="fa fa-bars"></span>
-              </label>
-            </div>
-          
-              <ul>
-                  <li><a asp-page="/Index" class="active">Home</a></li>
-                   <li><a asp-page="/Index">Profile</a></li>
-                   <li><a asp-page="/Index">Contacts</a></li>
-                <li><a asp-page="/Auth/Register">Registration</a></li>
-                <li><a asp-page="/Auth/Login">Login</a></li>
-              </ul>
-        </nav>
-    </header>
-
-
 
 <div class="container">
     <main role="main" class="pb-3">
@@ -73,7 +43,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2022 - ZealandMarketPlace - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2022 - ZealandMarketPlace
     </div>
 </footer>
 
