add the best authentication ever, but unfortunetally in .net 5

--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
                             <a class="nav-link text-dark" asp-page="/Auth/Login">Login</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial"/>
+
                 </div>
             </div>
         </nav>
