--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - ZealandMarketPlace</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/login.css">
+
 </head>
 <body>
     <header>
