--- a/ZealandMarketPlace/Pages/Items/GetItems.cshtml
+++ b/ZealandMarketPlace/Pages/Items/GetItems.cshtml
@@ -3,6 +3,7 @@
 @{
 }
 <div class="col-3">
+    <a asp-page="/Items/AddItem"> Add Item</a>
     <div class="row">
         @foreach (var item in Model.items)
         {
