--- a/ZealandMarketPlace/wwwroot/css/addItem.css
+++ b/ZealandMarketPlace/wwwroot/css/addItem.css
@@ -1,108 +1,76 @@
-﻿div#first{
-    margin:50px auto 0;
-    padding:50px;
-    background-color:#EEE;
-    color:#333;
-    border:2px solid #C2D6FF;
-    border-radius:40px 0 40px 0
+﻿* {
+    box-sizing: border-box;
 }
-label{
-    font-size:15px;
-    font-weight:700
+body {
+    margin: 0;
 }
-input#fname{
-    background-repeat:no-repeat;
-    background-position:6px;
-    border:1px solid #DADADA;
-    margin-top:10px;
-    margin-bottom:10px;
-    padding-left:35px;
-    width:310px;
-    height:30px;
-    font-size:14px;
-    box-shadow:0 0 10px;
-    -webkit-box-shadow:0 0 10px;
-    /* For I.E */
-    -moz-box-shadow:0 0 10px;
-    /* For Mozilla Web Browser */
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    /* For I.E */
-    -moz-border-radius:5px
-    /* For Mozilla Web Browser */
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    justify-content: center;
 }
-input#email{
-    background-repeat:no-repeat;
-    background-position:6px;
-    border:1px solid #DADADA;
-    margin-top:10px;
-    margin-bottom:10px;
-    padding-left:35px;
-    width:310px;
-    height:30px;
-    font-size:14px;
-    box-shadow:0 0 10px;
-    -webkit-box-shadow:0 0 10px;
-    /* For I.E */
-    -moz-box-shadow:0 0 10px;
-    /* For Mozilla Web Browser */
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    /* For I.E */
-    -moz-border-radius:5px
-    /* For Mozilla Web Browser */
+
+div.info-container {
+    display: flex;
+    flex-direction: column;
 }
-input#contact{
-    background-repeat:no-repeat;
-    background-position:6px;
-    border:1px solid #DADADA;
-    margin-top:10px;
-    margin-bottom:10px;
-    padding-left:35px;
-    width:310px;
-    height:30px;
-    font-size:14px;
-    box-shadow:0 0 10px;
-    -webkit-box-shadow:0 0 10px;
-    /* For I.E */
-    -moz-box-shadow:0 0 10px;
-    /* For Mozilla Web Browser */
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    /* For I.E */
-    -moz-border-radius:5px
-    /* For Mozilla Web Browser */
+
+div.form-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
-input#address{
-    background-repeat:no-repeat;
-    background-position:6px;
-    border:1px solid #DADADA;
-    margin-top:10px;
-    margin-bottom:10px;
-    padding-left:35px;
-    width:310px;
-    height:30px;
-    font-size:14px;
-    box-shadow:0 0 10px;
-    -webkit-box-shadow:0 0 10px;
-    /* For I.E */
-    -moz-box-shadow:0 0 10px;
-    /* For Mozilla Web Browser */
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    /* For I.E */
-    -moz-border-radius:5px
-    /* For Mozilla Web Browser */
+
+div.info-container > label {
+    
 }
-input#submit {
-    background-color:#cc7a66;
-    border-radius:5px;
-    border:none;
-    padding:10px 25px;
-    color:#FFF;
-    text-shadow:1px 1px 1px #949494;
-    margin-left:120px
+
+div.info-container > input {
+    width: 100%;
+    padding: 8px 8px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
-input#submit:hover{
-    background-color:#FF9980
+
+div.info-container > textarea {
+    width: 100%;
+    padding: 8px 8px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;
 }
+
+div.img-container {
+    min-width: 300px;
+    padding: 20px;
+}
+
+#submit {
+    cursor:pointer;
+    width: auto;
+    height: 40px;
+    transition: 0.5s;
+}
+
+#submit:hover {
+    opacity: 0.8;
+}
+
+div.category-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+div.category-container > select{
+    width: 150px;
+    padding: 8px 8px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+
