--- a/ZealandMarketPlace/Pages/Auth/Login.cshtml
+++ b/ZealandMarketPlace/Pages/Auth/Login.cshtml
@@ -2,8 +2,11 @@
 @model ZealandMarketplace.Pages.Auth.Login
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Login Page";
+   
 }
+
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,9 +26,11 @@
 </head>
 <body>
 
+<!--
 <header class="header">   
     <p>Zealand Marketplace</p>
 </header>
+-->
 
 
 <div class="container_login">
@@ -42,10 +47,10 @@
          </div>
     </div>
 </div>
-
+<!--
 <footer class="footer">
     <p>Copyright © 2022 Zealand Marketplace</p>
 </footer>
-
+-->
 </body>
 </html>
