--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -1,10 +1,147 @@
 ﻿@page
 @model IndexModel
+
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<link rel="stylesheet" href="~/css/index.css">
+
+<main>
+    <section class="card_section">
+        <div class="card_container">
+            <div class="card_image">
+                <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+            </div>
+
+            <div class="card_text_content">
+                <div class="card_title">
+                    <p class="text--medium">
+                        Table from Zealand school
+                    </p>
+                    <p class="text--medium text_bold">
+                        120dkk
+                    </p>
+                </div>
+                <div class="card_info">
+                    <p class="text--medium">Patrik</p>
+                    <a asp-page="/Details" class="button_details">Details</a>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="card_container">
+            <div class="card_image">
+                <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+            </div>
+        
+            <div class="card_text_content">
+                <div class="card_title">
+                    <p class="text--medium">
+                        Table from Zealand school
+                    </p>
+                    <p class="text--medium text_bold">
+                        120dkk
+                    </p>
+                </div>
+                <div class="card_info">
+                    <p class="text--medium">Patrik</p>
+                    <a asp-page="/Details" class="button_details">Details</a>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="card_container">
+            <div class="card_image">
+                <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+            </div>
+        
+            <div class="card_text_content">
+                <div class="card_title">
+                    <p class="text--medium">
+                        Table from Zealand school
+                    </p>
+                    <p class="text--medium  text_bold">
+                        120dkk
+                    </p>
+                </div>
+                <div class="card_info">
+                    <p class="text--medium">Patrik</p>
+                    <a asp-page="/Details" class="button_details">Details</a>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="card_container">
+            <div class="card_image">
+                <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+            </div>
+        
+            <div class="card_text_content">
+                <div class="card_title">
+                    <p class="text--medium">
+                        Table from Zealand school
+                    </p>
+                    <p class="text--medium  text_bold">
+                        120dkk
+                    </p>
+                </div>
+                <div class="card_info">
+                    <p class="text--medium">Patrik</p>
+                    <a asp-page="/Details" class="button_details">Details</a>
+                </div>
+            </div>
+        </div>
+        
+        
+        
+        <div class="card_container">
+            <div class="card_image">
+                <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+            </div>
+        
+            <div class="card_text_content">
+                <div class="card_title">
+                    <p class="text--medium">
+                        Table from Zealand school
+                    </p>
+                    <p class="text--medium  text_bold">
+                        120dkk
+                    </p>
+                </div>
+                <div class="card_info">
+                    <p class="text--medium">Patrik</p>
+                    <a asp-page="/Details" class="button_details">Details</a>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="card_container">
+                    <div class="card_image">
+                        <img alt="photo" src="https://images.unsplash.com/photo-1530545124313-ce5e8eae55af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2942&q=80">
+                    </div>
+        
+                    <div class="card_text_content">
+                        <div class="card_title">
+                            <p class="text--medium">
+                                Table from Zealand school
+                            </p>
+                            <p class="text--medium  text_bold">
+                                120dkk
+                            </p>
+                        </div>
+                        <div class="card_info">
+                            <p class="text--medium">Patrik</p>
+                            <a asp-page="/Details" class="button_details">Details</a>
+                        </div>
+                    </div>
+                </div>
+    </section>
+</main>
+
+
