--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -35,14 +35,12 @@
     </nav>
 </header>
 
-<div class="container">
-    <main role="main" class="pb-3">
+<div>
         @RenderBody()
-    </main>
 </div>
 
 <footer class="border-top footer text-muted">
-    <div class="container">
+    <div class="container_footer">
         &copy; 2022 - ZealandMarketPlace
     </div>
 </footer>
