--- a/ZealandMarketPlace/wwwroot/css/login.css
+++ b/ZealandMarketPlace/wwwroot/css/login.css
@@ -1,7 +1,7 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier Prime', monospace;
 }
 
 /*LOGIN area*/
@@ -64,11 +64,13 @@ body{
 
 .link_registration span{
     color: #A8A8A8;
+    font-family: 'Roboto', sans-serif;
 }
 
 .link_registration a
 {
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
    color: #1B263B;
     
 }
