--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -4,7 +4,35 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<link rel="stylesheet" href="~/css/index.css">
+
+<main>
+    <section class="card_section">
+        @foreach (var item in Model.Items)
+        {
+            <div class="card_container">
+                <div class="card_image">
+                    <img alt="photo" src="data:image/png;base64,@Convert.ToBase64String(item.ImageData)">
+                </div>
+
+                <div class="card_text_content">
+                    <div class="card_title">
+                        <p class="text--medium">
+                            @item.Name
+                        </p>
+                        <p class="text--medium text_bold">
+                            @item.Price dkk
+                        </p>
+                    </div>
+                    <div class="card_info">
+                        <p class="text--medium">Patrik</p>
+                        <a asp-page="/Details" class="button_details">Details</a>
+                    </div>
+                </div>
+            </div>
+        }
+
+
+
+    </section>
+</main>
