--- a/ZealandMarketPlace/Pages/Auth/Register.cshtml
+++ b/ZealandMarketPlace/Pages/Auth/Register.cshtml
@@ -1,7 +1,10 @@
 @page
 @model ZealandMarketplace.Pages.Auth.Register
 
-
+@{
+    ViewData["Title"] = "Register Page";
+    Layout = "_Layout";
+}
 
 
 
