--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -7,6 +7,44 @@
 
 
 <link rel="stylesheet" href="~/css/index.css">
+ <script type="text/javascript" src="~/js/dropdown.js"></script>
+<script src="https://kit.fontawesome.com/671f3bdf44.js"></script>
+
+
+<section class="section_search_box">
+    <div class="container_search_box">
+        <div class="box_search_box">
+
+            <div class="filtering_dropdown">
+                <div class="main_slider_container">
+                    <div class="main_option">All</div>
+                    <div class="slider"></div>
+                </div>
+                <ul>
+                    <li>All</li>
+                    <li>Enum1</li>
+                    <li>Enum2</li>
+                    <li>Enum3</li>
+                    <li>Enum4</li>
+                    <li>Enum5</li>
+                </ul>
+            </div>
+
+            <div class="filtering_field">
+                <input type="text" class="input" placeholder="Search">
+
+                <i class="fa-solid fa-magnifying-glass"></i>
+
+            </div>
+        </div>
+    </div>
+  
+</section>
+
+
+
+
+
 
 <main>
     <section class="card_section">
