add details page and models

--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -26,7 +26,7 @@
                     </div>
                     <div class="card_info">
                         <p class="text--medium">Patrik</p>
-                        <a asp-page="/Details" class="button_details">Details</a>
+                        <a asp-page="/Items/ItemDetails" asp-route-id="@item.ItemId"  class="button_details">Details</a>
                     </div>
                 </div>
             </div>
