--- a/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
+++ b/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
@@ -2,48 +2,65 @@
 @model ZealandMarketPlace.Pages.Items.ItemDetailsModel
 @{
 }
-<h2>Details of @Model.item.Name</h2>
+
+<h2>Details of @Model.Item.Name</h2>
 
 <div>
     <dl class="row">
+        <div class="card_image">
+            <img alt="photo" src="data:image/png;base64,@Convert.ToBase64String(Model.Item.ImageData)">
+        </div>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.item.Name)
+            @Html.DisplayNameFor(model => model.Item.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.item.Name)
+            @Html.DisplayFor(model => model.Item.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.item.Status)
+            @Html.DisplayNameFor(model => model.Item.Status)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.item.Status)
+            @Html.DisplayFor(model => model.Item.Status)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.item.Descritpion)
+            @Html.DisplayNameFor(model => model.Item.Descritpion)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.item.Descritpion)
+            @Html.DisplayFor(model => model.Item.Descritpion)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.item.Category)
+            @Html.DisplayNameFor(model => model.Item.Category)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayTextFor(model => model.item.Category)
+            @Html.DisplayTextFor(model => model.Item.Category)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.item.Price)
+            @Html.DisplayNameFor(model => model.Item.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.item.Price)
+            @Html.DisplayFor(model => model.Item.Price)
         </dd>
     </dl>
     <form method="post">
         <div>
-            <input type="submit" value="Contact" class="btn btn-warning" />
+            <input type="submit" value="Contact" class="btn btn-warning"/>
         </div>
     </form>
-    <br />
+    <br/>
     <div>
         <a asp-page="/Items/GetItems">Back to List</a>
+    </div>
+
+    <div>
+        <form method="post" asp-page-handler="OnPostReview">
+            <label asp-for="@Model.Review.ReviewText">Review</label>
+            <textarea asp-for="@Model.Review.ReviewText" id="reviewTest" placeholder="Write your review" rows="4" cols="50"></textarea>
+            <select asp-for="@Model.Review.Rating" asp-items="Html.GetEnumSelectList<ReviewEnum>()">
+                <option selected="selected" value="">How many stars you will give?</option>
+            </select>
+            <div>
+                <input type="submit" value="Submit" class="btn btn-primary"/>
+            </div>
+        </form>
     </div>
 </div>
