--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,13 +1,37 @@
 @page
 @model LoginModel
 
+
+
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Login Page";
+    Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 
-<main>
 
+
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
+
+<!--
+<div class="container_login">
+    <div class="login_area">
+        <form>
+            <input type="text" name="EmailInput" placeholder="Email"><br>
+            <input type="password" name="PasswordInput" placeholder="Password"><br>
+            <input type="submit" name="LoginButton" value="Login">
+
+        </form>
+         <div class="link_registration">
+                <span>New Member?</span>
+             <a asp-page="Register">Sign up now</a>
+         </div>
+    </div>
+</div>
+-->
 
     <div class="container_login">
         <div class="login_area">
@@ -29,19 +53,7 @@
 
                 </form>
 
-                @* <form id="account" method="post"> *@
-                @*     <div asp-validation-summary="All" class="text-danger"></div> *@
-                @*     <div class="form-group"> *@
-                @*         <input asp-for="Input.Email" type="text" name="EmailInput" placeholder="Email"/> *@
-                @*         <span asp-validation-for="Input.Email" class="text-danger"></span> *@
-                @*     </div> *@
-                @* *@
-                @* *@
-                @*     <input asp-for="Input.Password" type="password" name="PasswordInput" placeholder="Password"/> *@
-                @*     <span asp-validation-for="Input.Password" class="text-danger"></span> *@
-                @*     <input type="submit" name="LoginButton" value="Login"> *@
-                @* *@
-                @* </form> *@
+                
             </section>
 
             <div class="link_registration">
@@ -50,7 +62,7 @@
             </div>
         </div>
     </div>
-</main>
+
 @* <h1>@ViewData["Title"]</h1> *@
 @* <div class="row"> *@
 @*     <div class="col-md-4"> *@
