--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - ZealandMarketPlace</title>
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/> *@
     <link rel="stylesheet" href="~/css/site.css"/>
-    <link rel="stylesheet" href="~/css/login.css">
+    <link rel="stylesheet" href="~/css/login.css"/>
     <link rel="stylesheet" href="~/css/register.css">
     <link rel="stylesheet" href="~/css/navigation.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,14 +46,11 @@
 @RenderBody()
 
 <footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2022 - ZealandMarketPlace - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    <div class="container_footer">
+        &copy; 2022 - ZealandMarketPlace
     </div>
 </footer>
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
