--- a/ZealandMarketPlace/wwwroot/css/index.css
+++ b/ZealandMarketPlace/wwwroot/css/index.css
@@ -14,6 +14,124 @@
     font-weight: bold;
 }
 
+.section_search_box{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+
+.container_search_box {
+    width: 50%;
+
+}
+
+.box_search_box{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    padding: 10px;
+    background-color: #F1F3F8;
+    border-radius: 5px;
+    box-shadow:  2px 2px 2px #D1D6E2;
+}
+
+.filtering_dropdown{
+    width:30%;
+    display: inline-block;
+    vertical-align: middle;
+    border-right: 2px solid #3174CC;
+    cursor:pointer;
+    z-index: 1;
+    color:#78899F;
+}
+
+.main_option{
+    font-size: 18px;
+}
+
+.filtering_dropdown ul{
+    display:none;
+    background-color: #F1F3F8;
+    margin-top: 20px;
+    margin-left: -10px;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 8px 8px 6px -10px #D1D6E2;
+}
+
+.filtering_dropdown ul.active{
+    display: block;
+}
+
+.filtering_dropdown ul li{
+    user-select: none;
+    padding-bottom: 20px;
+}
+
+.filtering_dropdown ul li:last-child{
+    padding-bottom: 0;
+}
+
+.filtering_dropdown ul li:hover{
+    color: #3174CC;
+}
+
+.main_slider_container{
+    display:flex;
+    padding: 16px 15px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.slider{
+    display: flex;
+    margin-top: 3px;
+}
+
+.slider:before{
+    content: "";
+    border: 8px solid;
+    border-color: #3174CC transparent transparent transparent;
+}
+
+.filtering_field{
+    width: 70%;
+    display: flex;
+    align-items: center;
+}
+
+.input{
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 100%;
+    font-size: 18px;
+    border: 0;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+}
+
+.fa-magnifying-glass{
+    position: relative;
+    font-size: 22px;
+    color: #3174CC;
+    cursor:pointer;
+}
+
+::-webkit-input-placeholder{
+    color: #78899F;
+}
+
+::-ms-input-placeholder{
+    color: #78899F;
+}
+
+
+/*Grid section (cards)*/
+
 main{
     display: grid;
     grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
@@ -38,7 +156,6 @@ main{
     flex-direction: column;
     cursor:pointer;
     transition: all 0.3s ease 0s;
-
 }
 
 .card_container:hover{
@@ -74,7 +191,6 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .button_details {
@@ -100,6 +216,12 @@ main{
     height: 30px;
 }
 
+@media only screen and (max-width: 1280px) {
+    .container_search_box{
+        width: 65%;
+    }
+}
+
 @media only screen and (max-width: 1000px) {
     .card_container{
         grid-column-end: span 6;
@@ -107,6 +229,11 @@ main{
 }
 
 @media only screen and (max-width: 700px) {
+
+    .container_search_box{
+        width: 80%;
+    }
+
     .card_container{
         grid-column-end: span 6;
     }
@@ -117,6 +244,10 @@ main{
 }
 
 @media only screen and (max-width: 500px) {
+
+    .container_search_box{
+        width: 96%;
+    }
 
     .card_section{
         grid-column: 2 / span 6;
