--- a/ZealandMarketPlace/wwwroot/css/login.css
+++ b/ZealandMarketPlace/wwwroot/css/login.css
@@ -16,8 +16,9 @@ body{
     height: auto;
     width: 400px;
     margin-top: 5%;
-    margin-bottom: 5%;
     background-color: #fff;
+    margin-bottom: 5%;
+    /*background-color: #fff;*/
     position: relative;
     border-radius: 25px;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.10), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
