--- a/ZealandMarketPlace/wwwroot/css/index.css
+++ b/ZealandMarketPlace/wwwroot/css/index.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Courier Prime', monospace;
 }
 
 .text--medium{
@@ -48,6 +49,7 @@
 }
 
 .main_option{
+
     font-size: 18px;
 }
 
@@ -100,6 +102,7 @@
     width: 70%;
     display: flex;
     align-items: center;
+
 }
 
 .input{
@@ -112,6 +115,7 @@
     background-color: transparent;
     resize: none;
     outline: none;
+
 }
 
 .fa-magnifying-glass{
@@ -130,13 +134,19 @@
 }
 
 
-/*Grid section (cards)*/
 
+
+
+
+
+
+/*Grid section (cards)*/
 main{
     display: grid;
     grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
     grid-gap: 40px;
     padding: 60px 0;
+    margin-bottom: 60px;
 
 }
 
@@ -156,6 +166,7 @@ main{
     flex-direction: column;
     cursor:pointer;
     transition: all 0.3s ease 0s;
+
 }
 
 .card_container:hover{
@@ -191,6 +202,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .button_details {
@@ -202,18 +214,6 @@ main{
     align-items: center;
     height: 2em;
     width: 6em;
-}
-
-.button_delete_area{
-    width: 100%;
-}
-
-.button_delete {
-    display: flex;
-    width: 100%;
-    background-color: #F2286D;
-    color: #F1F3F8;
-    height: 30px;
 }
 
 @media only screen and (max-width: 1280px) {
