--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,12 +10,9 @@
 
 
 
-
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    
-
 <!--
 <div class="container_login">
     <div class="login_area">
@@ -32,29 +29,26 @@
     </div>
 </div>
 -->
-
     <div class="container_login">
         <div class="login_area">
-            <section>
-                <form id="account" method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
-                        <input asp-for="Input.Email" class="form-control" placeholder="Email"/>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input asp-for="Input.Password" class="form-control" placeholder="Password"/>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Log in</button>
-                    </div>
+           
+            <form method="post">
+                <div asp-validation-summary="All" class="text_information"></div>
+                <div class="form-group">
+                    <input asp-for="Input.Email" type="text" placeholder="Email"/>
+                   <!-- <span asp-validation-for="Input.Email" class="text-danger"></span> -->
+                </div>
+                <div class="form-group">
+                    <input asp-for="Input.Password" type="password" placeholder="Password"/>
+                  <!--  <span asp-validation-for="Input.Password" class="text-danger"></span> -->
+                </div>
 
-                </form>
 
-                
-            </section>
+                <input type="submit" value="Login">
+
+
+            </form>
+
 
             <div class="link_registration">
                 <span>New Member?</span>
@@ -62,7 +56,6 @@
             </div>
         </div>
     </div>
-
 @* <h1>@ViewData["Title"]</h1> *@
 @* <div class="row"> *@
 @*     <div class="col-md-4"> *@
