--- a/ZealandMarketPlace/wwwroot/css/login.css
+++ b/ZealandMarketPlace/wwwroot/css/login.css
@@ -1,7 +1,7 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier Prime', monospace;
 }
 
 /*LOGIN area*/
@@ -10,6 +10,7 @@ body{
     height: auto;
     display: flex;
     justify-content: center;
+    margin-bottom: 40px;
 }
 
 .login_area{
@@ -31,28 +32,30 @@ body{
     margin-bottom: 50px;
 }
 
-.login_area input[type="text"], input[type="password"]
+.login_area input[type="text"], 
+.login_area input[type="password"]
 {
     border: none;
     outline: none;
     background: transparent;
     border-bottom: 1px solid #A8A8A8;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier Prime', monospace;
     font-size: 16px;
     font-weight: 300;
     color: #A8A8A8;
 }
 
-.login_area button[type="submit"]
+.login_area input[type="submit"]
 {
     margin:0;
     height: 55px;
     border: none;
     outline: none;
-    background: #415A77;
-    font-family: 'Roboto', sans-serif;
+    background: #3174CC;
+    font-family: 'Courier Prime', monospace;
     font-size: 20px;
     color: #fff;
+    cursor: pointer;
     border-radius: 12px;
 }
 
@@ -70,6 +73,11 @@ body{
 .link_registration a
 {
     text-decoration: none;
-   color: #1B263B;
+   color: #6FB0F1;
     
+}
+
+.text_information{
+    color:#F2286D;
+    margin-bottom: 5px;
 }
