--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -12,7 +12,15 @@
         {
             <div class="card_container">
                 <div class="card_image">
-                    <img alt="photo" src="data:image/png;base64,@Convert.ToBase64String(item.ImageData)">
+                    @if (@item.ImageData == null)
+                    {
+                        <img alt="photo" src="">
+                    }
+                    else
+                    {
+                        <img alt="photo" src="data:image/png;base64,@Convert.ToBase64String(item.ImageData)">
+                    }
+                    
                 </div>
                 
 
