register design + login small changes

--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Login.cshtml
@@ -52,7 +52,7 @@
 
             <div class="link_registration">
                 <span>New Member?</span>
-                <a asp-page="/Auth/Register">Sign up now</a>
+                <a asp-page="Register">Sign up now</a>
             </div>
         </div>
     </div>
