--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,54 +4,64 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+
 <div class="container_register">
     <div class="register_area">
 
         <div>
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group register_item">
-                    <input asp-for="Input.FirstName" class="form-control" placeholder="First name"/>
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                    <input asp-for="Input.LateName" class="form-control" placeholder="Last name"/>
-                    <span asp-validation-for="Input.LateName" class="text-danger"></span>
+                <!--<div asp-validation-summary="All" class="text-danger"></div> -->
+                <div class="validation">
+                    <span asp-validation-for="Input.FirstName" class="text_information"></span>
+                    <span asp-validation-for="Input.LateName" class="text_information"></span>
+
                 </div>
-                <div class="form-group register_item">
-                    <input asp-for="Input.Email" class="form-control" placeholder="Email"/>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    <input asp-for="Input.Phone" class="form-control" placeholder="Phone"/>
-                    <span asp-validation-for="Input.Phone" class="text-danger"></span>
+                <div class="register_item">
+                    <input asp-for="Input.FirstName"  type="text" placeholder="First name"/>
+                    <input asp-for="Input.LateName"  type="text" placeholder="Last name"/>
                 </div>
-                <div class="form-group register_item">
-                    <input asp-for="Input.Password" class="form-control" placeholder="Password"/>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirm password"/>
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <div class="validation">
+                    <span asp-validation-for="Input.Email" class="text_information"></span>
+                    <span asp-validation-for="Input.Phone" class="text_information"></span>
+
+                </div>
+                <div class="register_item">
+                    <input asp-for="Input.Email" type="text" placeholder="Email"/>
+                    <input asp-for="Input.Phone" type="text" placeholder="Phone"/>
+                </div>
+                <div class="validation">
+                        <span asp-validation-for="Input.Password"  class="text_information"></span>
+                     <span asp-validation-for="Input.ConfirmPassword" class="text_information"></span> 
+
+                </div>
+                <div class="register_item">
+                    <input asp-for="Input.Password" type="password"  placeholder="Password"/>
+                    <input asp-for="Input.ConfirmPassword" type="password"  placeholder="Confirm password"/>
                 </div>
                 <div class="register_button">
-                    <input type="submit" name="LoginButton" value="Sign up">
+                    <input type="submit"  value="Sign up">
                 </div>
                 
             </form>
         </div>
-
-
+        
         <div class="container_link">
-            <div class="link_login">
-                <div>
-                    <span>Already have an account?</span>
-                    <a asp-page="/Auth/Login">Login now</a>
+            <div class="container_area">
+                <div class="link_login">
+                   
+                        <span>Already have an account?</span>
+                        <a asp-page="Login">Login now</a>
+                   
                 </div>
             </div>
-        </div>
+            </div>
 
 
     </div>
 
 </div>
 
-
+<!--
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -107,7 +117,7 @@
         </section>
     </div>
 </div>
-
+-->
 @section Scripts {
     <partial name="_ValidationScriptsPartial"/>
 }
