--- a/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
             <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">profile</a>
         </li>
         <li>
-                <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new {area = ""})" method="post" type="submit">Logout</a>
+                <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new {area = ""})">Logout</a>
         </li>
     }
     else
