--- a/ZealandMarketPlace/wwwroot/css/login.css
+++ b/ZealandMarketPlace/wwwroot/css/login.css
@@ -32,6 +32,13 @@ body{
     margin-bottom: 50px;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 .login_area input[type="text"], 
 .login_area input[type="password"]
 {
