--- a/ZealandMarketPlace/wwwroot/css/index.css
+++ b/ZealandMarketPlace/wwwroot/css/index.css
@@ -213,6 +213,18 @@ main{
     height: 30px;
 }
 
+.button_favourite_area {
+    width: 100%;
+}
+
+.button_favourite {
+    display: flex;
+    width: 100%;
+    background-color: #4AD188;
+    color: #F1F3F8;
+    height: 30px;
+}
+
 @media only screen and (max-width: 1280px) {
     .container_search_box{
         width: 65%;
