--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/ManageItems.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/ManageItems.cshtml
@@ -2,13 +2,11 @@
 @model ManageItems
 
 @{
-    Layout = null;
-    ViewData["ActivePage"] = ManageNavPages.Email;
+    ViewData["Title"] = "ManageItems";
+    ViewData["ActivePage"] = ManageNavPages.ManageItems;
 }
-
-<link rel="stylesheet" href="~/css/index.css">
-
-<main>
+<main class="form-container">
+    <h4 class="form-title">@ViewData["Title"]</h4>
     <section class="card_section">
         @foreach (var item in Model.Items)
         {
@@ -34,7 +32,7 @@
                     </div>
                     <div class="card_info">
                         <a asp-page="./UpdateItem" asp-route-itemId="@item.ItemId" class="button_details">Update</a>
-                        <a asp-page="/Details" class="button_details">Delete</a>
+                        <a asp-page="./DeleteItem" asp-route-itemId="@item.ItemId" class="button_details">Delete</a>
                     </div>
                 </div>
             </div>
