--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,26 +1,30 @@
 ﻿@{
-    if (ViewData.TryGetValue("ParentLayout", out var parentLayout))
-    {
-        Layout = (string)parentLayout;
-    }
-    else
-    {
-        Layout = "Manage/_Layout.cshtml";
-    }
+        Layout = "/Pages/Shared/_Layout.cshtml";
 }
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>@ViewData["Title"] - ZealandMarketPlace</title>
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/> *@
+    <link rel="stylesheet" href="~/css/navigation.css">
+    <link rel="stylesheet" href="~/css/profile.css">
+    <link rel="stylesheet" href="~/css/index.css">
+    <link rel="stylesheet" href="~/css/updateItem.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="~/js/navigation.js"></script>
 
-<h2>Manage your account</h2>
-
+</head>
 <div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
+    <div class="options-container">
+        <partial name="_ManageNav" />
+    </div>
+    
+    <div class="section-title">
             @RenderBody()
-        </div>
     </div>
 </div>
 
