--- a/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/login.css"/>
     <link rel="stylesheet" href="~/css/register.css">
     <link rel="stylesheet" href="~/css/navigation.css">
+    <link rel="stylesheet" href="~/css/addItem.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
