--- a/ZealandMarketPlace/wwwroot/css/site.css
+++ b/ZealandMarketPlace/wwwroot/css/site.css
@@ -67,3 +67,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
