--- a/ZealandMarketPlace/wwwroot/css/index.css
+++ b/ZealandMarketPlace/wwwroot/css/index.css
@@ -208,9 +208,13 @@ main{
 .button_delete {
     display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
     background-color: #F2286D;
     color: #F1F3F8;
+    margin-top: 10px;
     height: 30px;
+    border-radius: 20px;
 }
 
 @media only screen and (max-width: 1280px) {
